--- a/src/components/header/css/header.css
+++ b/src/components/header/css/header.css
@@ -4,6 +4,11 @@
     color: white;
     border-bottom: solid 1px #555555;
 }
+
+.header .container {
+    padding-top: 0px;
+}
+
 .header .nav {
     display: block;
 }
@@ -13,6 +18,7 @@
     padding-bottom: 5px;
     max-height: 30px;
     width: 140px;
+    padding-left: 10px;
 }
 
 .header .nav .brand img {
@@ -57,7 +63,27 @@
     height: 40px;
     line-height: 40px;
     vertical-align: middle;
+    display: block;
+}
+
+.header .toggle-btn, .header .toggle-btn:focus, .header .toggle-btn:active{
+    right: 0;
+    float: right;
     display: inline-block;
+    height: 40px;
+    vertical-align: top;
+    line-height: 40px;
+    font-size: 25px;
+    background: black;
+    border: none;
+    color: white;
+    outline:none;
+    cursor: pointer;
+    cursor: hand;
+}
+
+.header .toggle-btn:focus {
+    background: #333333;
 }
 
 @media only screen and (min-width : 992px) {
@@ -73,6 +99,10 @@
         height: auto;
     }
 
+    .header .nav .brand {
+        padding-left: 0px;
+    }
+
     .header .nav .links li {
         height: 40px;
         display: inline-block;
@@ -82,5 +112,9 @@
 
     .header .nav .links li:hover {
         background: #333333;
+    }
+
+    .header .toggle-btn{
+        display: none;
     }
 }
